--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea*
 # AWS User-specific
 .idea/**/aws.xml
 
@@ -47,7 +47,7 @@
 
 # CMake
 cmake-build-*/
-
+Cmake*
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
